# persons_microservice

./: .isort.cfg  Dockerfile  README.md  app.py  config.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  schemas.py  views.py  worker.py
migrations/versions/: 3ca20fcd4ae6_.py  69c66a8e1ffc_.py  759bbffee888_add_patietn_id.py  8569c3c2da55_firts.py  9c0170622b8a_add_patient.py  ec8a13c5ada9_.py  fcd55b3a077f_add_password.py
models/: doctor.py  patient.py  user.py
services/: auth.py  doctor.py  services.py
views/: auth.py  doctor.py  patient.py
